samples/envoyfilter-sidecar-reviews-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: sidecar-lua-filter-per-route
  namespace: bookinfo
spec:
  workloadLabels:
    labels:
        app: reviews
        version: v1
  configPatches:
    - applyTo: HTTP_ROUTE
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          vhost:
            name: "inbound|http|9080"
            route:
              name: default
      patch:
        operation: MERGE
        value:
          response_headers_to_add:
          - header:
              key: "myname"
              value: "alex"
          typed_per_filter_config:
            envoy.filters.http.lua:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
              source_code:
                inline_string: |
                  package.path = "/usr/local/share/lua/?.lua;;"
                  require("apisix.entry")
          metadata:
            filter_metadata:
              envoy.filters.http.lua:
                plugins:
                - name: uri-blocker
                  conf:
                    rejected_code: 403
                    block_rules: 
                    - reviews

---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: sidecar-lua-filter
  namespace: bookinfo
spec:
  workloadLabels:
    labels:
        app: reviews
        version: v1
  configPatches:
    - applyTo: HTTP_FILTER
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inline_code: |
              function envoy_on_request(request_handle)
              end
              function envoy_on_response(response_handle)
              end
